@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.146 2005/04/17 07:13:27 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.147 2005/04/22 06:11:59 agaffney Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
+
+  22 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Update resizing code in GLIStorageDevice
 
   17 Apr 2005; Preston Cody <codeman@gentoo.org>
   Update AUTHORS, NEWS, TODO.  Added documentation to GLILogger.
